ádded logging to changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@
 
 ## 0.1
 
+XX/XX/XX mtiberti
+
+Changes
+* added logging system and associated partial refactoring
+
 02/07/18 mtiberti
 
 Changes
